# loophole-robotics

./: README.md
loophole arm/: README.md  cup_lift.xml  optimize.py  render.py
loophole-arm/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
loophole-arm/.github/workflows/: ci.yml
loophole-arm/configs/: naive.yaml  shaped.yaml  strict.yaml
loophole-arm/scripts/: fetch_menagerie.sh
loophole-arm/src/loophole_arm/: __init__.py  __main__.py  cli.py  config.py  env.py  logging_setup.py  optimizer.py  renderer.py  rewards.py  scene.py
loophole-arm/tests/: conftest.py  test_env.py  test_optimizer.py  test_rewards.py  test_scene.py
