[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "loophole-arm"
dynamic = ["version"]
description = "Reward-hacking demo on a UR5e + Robotiq 2F-85 in MuJoCo."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Helix" }]
keywords = ["robotics", "mujoco", "reinforcement-learning", "simulation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "mujoco>=3.2",
  "numpy>=1.26",
  "imageio>=2.34",
  "imageio-ffmpeg>=0.5",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "pre-commit>=3.7",
]

[project.scripts]
loophole-arm = "loophole_arm.cli:main"

[project.urls]
Homepage = "https://github.com/helix/loophole-robotics"
Issues   = "https://github.com/helix/loophole-robotics/issues"

[tool.hatch.version]
path = "src/loophole_arm/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/loophole_arm"]
# Vendor menagerie assets into the wheel so the package is self-contained
artifacts = ["assets/menagerie/**/*"]

[tool.hatch.build.targets.sdist]
include = ["src", "assets/menagerie", "configs", "tests", "README.md", "LICENSE"]

# ── Tooling ────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  "E", "F", "W",   # pycodestyle / pyflakes
  "I",             # isort
  "B",             # bugbear
  "UP",            # pyupgrade
  "N",             # pep8-naming
  "SIM",           # flake8-simplify
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B018"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning:mujoco",
]
